--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./dist/index.css" />
 </head>
 <body>
-<div id="example"></div>
+<div class="container" id="content"></div>
 
 <!-- Dependencies -->
 <script src="./node_modules/react/dist/react.js"></script>
